# rust-playground

./: Cargo.toml  diesel.toml
migrations/2024-10-26-081712_create_rusts/: up.sql
migrations/2024-10-26-082439_fix_create_tests_table/: down.sql  up.sql
src/: main  main.rs  schema.rs
src/application/: mod.rs
src/domain/: mod.rs
src/infrastructure/: database.rs  mod.rs
src/presentation/: mod.rs
