[package]
name = "rust_mysql_crud"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
diesel = { version = "2.2.4", features = ["mysql_backend", "mysql"] }
dotenvy = "0.15.7"
mysql = "25.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
